--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,15 +23,51 @@ services:
     depends_on:
       db:
         condition: service_healthy
+      kafka:
+        condition: service_started
     environment:
       SPRING_DATASOURCE_URL: jdbc:postgresql://db:5432/springbootdb
       SPRING_DATASOURCE_USERNAME: postgres
       SPRING_DATASOURCE_PASSWORD: postgres
       APP_JWT_SECRET: ${APP_JWT_SECRET:-ZmFrZV9kZWNvZGVkX2Jhc2U2NF9zZWNyZXRfa2V5X3RvX2NoYW5nZQ==}
       APP_JWT_EXPIRATION_MS: 3600000
+      SPRING_KAFKA_BOOTSTRAP_SERVERS: kafka:9092
+      APP_AUDIT_TOPIC: audit-events
       JAVA_OPTS: -Xms256m -Xmx512m
     ports:
       - "8080:8080"
+
+  consumer:
+    build: .
+    container_name: upay-consumer
+    depends_on:
+      db:
+        condition: service_healthy
+      kafka:
+        condition: service_started
+    environment:
+      SPRING_PROFILES_ACTIVE: consumer
+      SPRING_DATASOURCE_URL: jdbc:postgresql://db:5432/springbootdb
+      SPRING_DATASOURCE_USERNAME: postgres
+      SPRING_DATASOURCE_PASSWORD: postgres
+      SPRING_KAFKA_BOOTSTRAP_SERVERS: kafka:9092
+      APP_AUDIT_TOPIC: audit-events
+      JAVA_OPTS: -Xms256m -Xmx512m
+
+  kafka:
+    image: bitnami/kafka:3.7
+    container_name: upay-kafka
+    ports:
+      - "9092:9092"
+    environment:
+      - KAFKA_ENABLE_KRAFT=yes
+      - KAFKA_CFG_PROCESS_ROLES=broker,controller
+      - KAFKA_CFG_CONTROLLER_LISTENER_NAMES=CONTROLLER
+      - KAFKA_CFG_LISTENERS=PLAINTEXT://:9092,CONTROLLER://:9093
+      - KAFKA_CFG_ADVERTISED_LISTENERS=PLAINTEXT://kafka:9092
+      - KAFKA_CFG_CONTROLLER_QUORUM_VOTERS=1@kafka:9093
+      - KAFKA_CFG_NODE_ID=1
+      - ALLOW_PLAINTEXT_LISTENER=yes
 
 volumes:
   db_data:
