Agregado de metricas

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -33,6 +33,10 @@ services:
       APP_JWT_EXPIRATION_MS: 3600000
       SPRING_KAFKA_BOOTSTRAP_SERVERS: kafka:9092
       APP_AUDIT_TOPIC: audit-events
+      MANAGEMENT_ENDPOINTS_WEB_EXPOSURE_INCLUDE: health,prometheus
+      MANAGEMENT_ENDPOINT_HEALTH_PROBES_ENABLED: "true"
+      MANAGEMENT_METRICS_TAGS_APPLICATION: desafio-upay
+      MANAGEMENT_METRICS_DISTRIBUTION_PERCENTILES_HTTP_SERVER_REQUESTS: 0.5,0.95,0.99
       JAVA_OPTS: -Xms256m -Xmx512m
     ports:
       - "8080:8080"
