--- a/src/main/resources/application.properties.example
+++ b/src/main/resources/application.properties.example
@@ -40,3 +40,10 @@ app.jwt.expiration-ms=${APP_JWT_EXPIRATION_MS:3600000}
 spring.kafka.bootstrap-servers=${SPRING_KAFKA_BOOTSTRAP_SERVERS:localhost:9092}
 app.audit.topic=${APP_AUDIT_TOPIC:audit-events}
 spring.kafka.consumer.auto-offset-reset=earliest
+
+# Actuator & Metrics (Prometheus)
+management.endpoints.web.exposure.include=health,prometheus
+management.endpoint.health.probes.enabled=true
+management.metrics.tags.application=desafio-upay
+management.metrics.distribution.percentiles-histogram.http.server.requests=true
+management.metrics.distribution.percentiles.http.server.requests=0.5,0.95,0.99
