--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,3 @@
-version: '3.8'
 services:
   db:
     image: postgres:15
@@ -29,6 +28,7 @@ services:
       SPRING_DATASOURCE_URL: jdbc:postgresql://db:5432/springbootdb
       SPRING_DATASOURCE_USERNAME: postgres
       SPRING_DATASOURCE_PASSWORD: postgres
+      SPRING_JPA_HIBERNATE_DDL_AUTO: update
       APP_JWT_SECRET: ${APP_JWT_SECRET:-ZmFrZV9kZWNvZGVkX2Jhc2U2NF9zZWNyZXRfa2V5X3RvX2NoYW5nZQ==}
       APP_JWT_EXPIRATION_MS: 3600000
       SPRING_KAFKA_BOOTSTRAP_SERVERS: kafka:9092
@@ -54,6 +54,9 @@ services:
       SPRING_DATASOURCE_URL: jdbc:postgresql://db:5432/springbootdb
       SPRING_DATASOURCE_USERNAME: postgres
       SPRING_DATASOURCE_PASSWORD: postgres
+      SPRING_JPA_HIBERNATE_DDL_AUTO: update
+      APP_JWT_SECRET: ${APP_JWT_SECRET:-ZmFrZV9kZWNvZGVkX2Jhc2U2NF9zZWNyZXRfa2V5X3RvX2NoYW5nZQ==}
+      APP_JWT_EXPIRATION_MS: 3600000
       SPRING_KAFKA_BOOTSTRAP_SERVERS: kafka:9092
       APP_AUDIT_TOPIC: audit-events
       JAVA_OPTS: -Xms256m -Xmx512m
